--- a/4챕터.md
+++ b/4챕터.md
@@ -6,14 +6,14 @@ If 조건식이 참이면 괄호{} 안의 문장들을 수행하라.
 
 블록{} : 여러 문장을 하나의 단위로 묶을 수 있는 것
 
-Switch 
+###Switch 
 
 1. 조건식을 계산
 1. 조건식의 결과와 일치하는 case문으로 이동
 1. ` `이후의 문장들을 수행
 1. break문이나 switch 문이 끝을 만나면 switch문 전체를 빠져나감
 
-switch문의 제약조건
+###switch문의 제약조건
 
 반드시 결과값이  정수여야하고 case문의 결과값도 마찬가지로 정수 여야한다.
 
@@ -72,7 +72,7 @@ while문은 한번도 실행 않을 수도 있지만
 
 do-while문은 반드시 한번은 수행 한다.
 
-Break
+###Break
 
 특정 조건을 만족하면 벗어나게 해준다.
 
@@ -80,7 +80,7 @@ Break
 
 그렇지 않으면 프로그램이 안멈춘다.
 
-Continue
+###Continue
 
 반복문 내에서만 사용가능
 
